--- a/index.html
+++ b/index.html
@@ -28,23 +28,24 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#!">Booksfeed</a>
                 </li>
+                <!-- Genre Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Genre
+                    Genre
                     </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Romance</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Horror</a></li>
+                    <ul class="dropdown-menu" id="genreDropdown">
+                    <li><a class="dropdown-item" href="#" data-genre="Action">Action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Romance">Romance</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
                     </ul>
-                  </li>
+                </li>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 </form> 
                 <li class="nav-item">
-                    <button class="btn btn-outline-success custom-hover-btn" type="submit" id="signinbutton">Sign In</button>
+                    <button class="btn btn-outline-success custom-hover-btn" type="submit" id="signinbutton" style="color: black;">Sign In</button>
                 </li>             
             </ul>
         </div>
@@ -125,6 +126,22 @@
             </div>
         </div>
 
-
+<script type="module">
+    import { checkAuth } from './auth.js';
+    
+    document.addEventListener('DOMContentLoaded', async () => {
+        const user = await checkAuth();
+        const logo = document.getElementById('logo');
+        
+        // Redirect users based on authentication status
+        logo.addEventListener('click', () => {
+            if (user) {
+                window.location.href = 'userhome.html';
+            } else {
+                window.location.href = 'index.html';
+            }
+        });
+    });
+</script>      
 </body>
 </html>
