fixed user authentication

--- a/sellingform.html
+++ b/sellingform.html
@@ -29,24 +29,24 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="userhome.html">Booksfeed</a>
                 </li>
+                <!-- Genre Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Genre
+                    Genre
                     </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Romance</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Horror</a></li>
+                    <ul class="dropdown-menu" id="genreDropdown">
+                    <li><a class="dropdown-item" href="#" data-genre="Action">Action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Romance">Romance</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
                     </ul>
-                  </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#!">Messages</a>
                 </li>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success custom-hover-btn" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
                     <a class="nav-link" href="sellingform.html">SELL A BOOK</a>
