--- a/userhome.html
+++ b/userhome.html
@@ -28,24 +28,24 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="userhome.html">Booksfeed</a>
                 </li>
+                <!-- Genre Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Genre
+                    Genre
                     </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Romance</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Horror</a></li>
+                    <ul class="dropdown-menu" id="genreDropdown">
+                    <li><a class="dropdown-item" href="#" data-genre="Action">Action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Romance">Romance</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
                     </ul>
-                  </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#!">Messages</a>
                 </li>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success custom-hover-btn" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
                     <a class="nav-link" href="sellingform.html">SELL A BOOK</a>
@@ -82,7 +82,7 @@
             </div>
         </div>
 
-        <!-- Call to Action -->
+        <!-- Books of the Week! -->
         <div class=" my-5 py-0 text-center">
             <div class="card-body">
                 <p class="display-6 text-dark m-0">Hot Selling Books of the Week!</p>
@@ -139,6 +139,5 @@
                 </div>
             </div>
         </div>
-
 </body>
 </html>
