--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#!">Booksfeed</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Booksfeed</a>
                 </li>
                 <!-- Genre Dropdown -->
                 <li class="nav-item dropdown">
