--- a/sellingform.html
+++ b/sellingform.html
@@ -11,7 +11,7 @@
     <link href="css/userhome.css" rel="stylesheet" />
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/sellingform.js"></script>
-    <script type="module" src="js/userhome.js"></script>
+    <script type="module" src="js/navbar.js"></script>
 </head>
 <body>
 <!-- Responsive navbar -->
@@ -56,7 +56,6 @@
                         <img src="images/profileicon.svg" alt="profileicon" style="width: 30px; height: 35px; object-fit: cover; border-radius: 50%">
                     </a>                    
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown" id="profileDropdownMenu">
-                        <li><a class="dropdown-item" href="manage-account.html">Manage Account</a></li>
                         <!-- Placeholder for dynamic role-based items -->
                         <li id="roleBasedItem"></li>
                         <li><hr class="dropdown-divider"></li>
