--- a/userhome.html
+++ b/userhome.html
@@ -34,11 +34,11 @@
                     Genre
                     </a>
                     <ul class="dropdown-menu" id="genreDropdown">
-                    <li><a class="dropdown-item" href="#" data-genre="Action">Action</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#" data-genre="Romance">Romance</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
+                        <li><a class="dropdown-item" href="#" data-genre="Action">Action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" data-genre="Romance">Romance</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -54,8 +54,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="images/profileicon.svg" alt="profileicon" style="width: 30px; height: 35px; object-fit: cover; border-radius: 50%">
                     </a>                    
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown" id="profileDropdownMenu">
-                        <li><a class="dropdown-item" href="manage-account.html">Manage Account</a></li>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                         <!-- Placeholder for dynamic role-based items -->
                         <li id="roleBasedItem"></li>
                         <li><hr class="dropdown-divider"></li>
