recent listing now shows up

--- a/manage-account.html
+++ b/manage-account.html
@@ -101,7 +101,7 @@
         <!-- Content Row -->
         <div class="container p-0">
             <div class="row mt-2 ms-0 me-0 gap-5 p-0">
-                <div class="col ps-0 pe-0 custombg-bwhite rounded-top-3">
+                <div class="col ps-0 pe-0 h-50 custombg-bwhite rounded-top-3">
                     <h4 class="content-column-first title ps-3 " style="color:#535353;">About</h4>
                     <div class="lineseparator border border-top-1 custombg-bwhite"></div>
                     <div class="row" style="box-sizing: border-box; margin-right: 0; margin-left: 0;">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
               </div>
-              <div class="col ps-0 pe-0 custombg-bwhite rounded-top-3">
+              <div class="col ps-0 pe-0 custombg-bwhite rounded-top-3 h-50">
                 <h4 class="content-column-first title ps-3" style="color:#535353;">blank</h4>
               </div>
             </div>
