--- a/userhome.html
+++ b/userhome.html
@@ -81,63 +81,14 @@
             </div>
         </div>
 
-        <!-- Books of the Week! -->
-        <div class=" my-5 py-0 text-center">
-            <div class="card-body">
-                <p class="display-6 text-dark m-0">Hot Selling Books of the Week!</p>
-            </div>
-        </div>
-
-        <!-- Content Row -->
-        <div class="row gx-4 gx-lg-5">
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/lotr-1.jpg" class="img-fluid" alt="Book Image One" style="height: 300px; object-fit: cover;">
-                        </div>
-                        <h4 class="card-title mt-3 fw-bold">The Fellowship of the Ring Collector's Edition: Being the First Part of The Lord of the Rings</h4>
-                        <p class="card-text text-hidden">
-                            Sauron, the Dark Lord, has gathered to him all the Rings of Power—the means by which he intends to rule Middle-earth. All he lacks in his plans for dominion is the One Ring—the ring that rules them all—which has fallen into the hands of the hobbit, Bilbo Baggins.
-                            In a sleepy village in the Shire, young Frodo Baggins finds himself faced with an immense task, as his elderly cousin Bilbo entrusts the Ring to his care. Frodo must leave his home and make a perilous journey across Middle-earth to the Cracks of Doom, there to destroy the Ring and foil the Dark Lord in his evil purpose.
-                        </p>
-                        <a href="javascript:void(0);" class="read-more">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/lotr-2.jpg" class="img-fluid" alt="Book Image Two" style="height: 300px; object-fit: cover;">
-                        </div>
-                        <h4 class="card-title mt-3 fw-bold">The Two Towers Collector's Edition: Being the Second Part of The Lord of the Rings</h4>
-                        <p class="card-text text-hidden">
-                            Frodo and the Companions of the Ring have been beset by danger during their quest to prevent the Ruling Ring from falling into the hands of the Dark Lord by destroying it in the Cracks of Doom.
-
-                            Now they continue their journey alone down the great River Anduin—alone, that is, save for the mysterious creeping figure that follows wherever they go.
-                        </p>
-                        <a href="javascript:void(0);" class="read-more">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/lotr-3.jpg" class="img-fluid" alt="Book Image Three" style="height: 300px; object-fit: cover;">
-                        </div>
-                        <h4 class="card-title mt-3 fw-bold">The Return of the King Collector's Edition: Being the Third Part of The Lord of the Rings</h4>
-                        <p class="card-text text-hidden">
-                            The Companions of the Ring have become involved in separate adventures as the quest continues. Aragorn, revealed as the hidden heir of the ancient Kings of the West, joined with the Riders of Rohan against the forces of Isengard, and took part in the desperate victory of the Hornburg. Merry and Pippin, captured by Orcs, escaped into Fangorn Forest and there encountered the Ents.
-
-                            Gandalf returned, miraculously, and defeated the evil wizard, Saruman. Meanwhile, Sam and Frodo progressed towards Mordor to destroy the Ring, accompanied by Gollum, still obsessed by his “precious.” After a battle with the giant spider, Shelob, Sam left his master for dead; but Frodo is still alive—in the hands of the Orcs. And all the time the armies of the Dark Lord are massing.
-                        </p>
-                        <a href="javascript:void(0);" class="read-more">Read More</a>
-                    </div>
-                </div>
-            </div>
+        <!-- Heading for books section -->
+        <div class="text-center my-5">
+            <h2 class="display-6">Recently Listed Books</h2>
         </div>
         
+        <!-- Books Grid -->
+        <div id="bookListContainer" class="row gx-4 gx-lg-5">
+            <!-- Book cards will be dynamically injected here -->
+        </div>
 </body>
 </html>
