--- a/manage-account.html
+++ b/manage-account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Home</title>
+    <title>Manage Account</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -131,9 +131,6 @@
                     <div class="d-flex flex-column align-items-center justify-content-center" id="userRecentListing">
                     </div>
                 </div>
-              </div>
-              <div class="col ps-0 pe-0 custombg-bwhite rounded-top-3 h-50">
-                <h4 class="content-column-first title ps-3" style="color:#535353;">blank</h4>
               </div>
             </div>
           </div>
